--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -205,39 +205,12 @@
 		</div>
 	</div>
 </div>
-<div id="first_login_panel" class="panel modal">
-	<div class="panel_header">
-		<h2>Welcome</h2>
-		<div id="btn_close_explain" class="btn btn_close" onclick="objFirstLogin.hide();">X</div>
-	</div>
-	<div class="modal_content">
-		<div id="first_login_content">
-			<h2>Welcome to the Philips Lives Improved app</h2>
-
-			<p>In this app you can view the most recent status of the Lives Improved KPI, see how it has developed in the recent past and how it will develop based sales growth estimations. You can even see how multiple sales growth scenarios affect the status of Lives Improved at Year-End.
-			</p>
-			
-			<h3>What is Lives Improved?</h3>
-			<p>
-			At Philips, we strive to make the world healthier and more sustainable through innovation. Our goal is to improve the lives of 3 billion people a year by 2025. "Lives improved" by Philips is the number of people that have been in touch with either a Philips care-, green-, or well-being- product in a given year.
-			<br/>
-			More detailed information can be found in the FAQ section of this app.
-			
-			<h3>About this app</h3>
-			<p>
-			The app shows Lives Improved data based on a selection along two axes: geography and Philips business entity. Both are available at different levels of granularity, i.e. ranging from world to country level geographically and group level, sector level and more granular along the Philips business axis. The selection is shown in the black bar in the top of the screen; default is market-group level.
-			<br/>
-			To view the current status of Lives Improved simply tap on the world map to select a geographical cross section you’re interested in. This will open a bar in the top of the screen. On the left hand side you will find information on the current status of Lives Improved in the selected cross section, including context data like GDP and population. The middle of the bar shows a trend graph, here you see the trend during the year and the expected status at year end based on extrapolation of year to date sales. The right hand side of the screen shows one or two sliders, one for sales and one for green sales percentage, depending on the business selection. By moving the sliders left or right you can see the impact of sales and/or green sales percentage on the Lives Improved status at year end. (NB. Increasing the sales slider by 1% means for example a sales increase from EUR 100 tot EUR 101, increasing the green sales percentage slider by 1% means for example a green sales percentage increase from 35% to 36%)
-			</p>
-			<p>
-			The bottom of the screen shows a bar with four icons:
-			</p>
-			<ul>
-				<li>The bookmarks icon (heart) lets you save your favorite views (geography and Philips business selection).</li>
-				<li>The filter icon lets you select the level of geographical breakdown, i.e. Lives Improved for the whole world or per country, and the Philips reporting unit, i.e. the whole Philips group or a specific BU.</li>
-				<li>The FAQ section contains answers to the most frequently asked questions. For more information you can always email <a href="mailto:sustainability@philips.com">sustainability@philips.com</a>.</li>
-				<li>The logout icon which will log your account out of the app.</li>
-			</ul>
+<div id="panel_info_panel" class="panel modal fullscreen" onclick="objPanelInfo.hide();">
+	<div id="content_wrapper">
+		<div class="modal_content">
+			<div id="panel_info_content">
+	
+			</div>
 		</div>
 	</div>
 </div>
