changes needed to support IE9 & 10

--- a/html/index.html
+++ b/html/index.html
@@ -2,10 +2,15 @@
 <!--[if IEMobile 7 ]>    <html class="no-js iem7"> <![endif]-->
 <!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 		<meta charset="utf-8">
 		<title></title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+
+		<!--[if lt IE 9]>
+		<meta http-equiv="refresh" content="0;URL=http://windows.microsoft.com/en-us/internet-explorer/download-ie">
+		<![endif]-->
 
 		<!-- the fixed resources -->
 		<!-- Config (contains the definitions and the css and js sources to load dynamically) -->
