--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 
 		<!--[if lt IE 9]>
-		<meta http-equiv="refresh" content="0;URL=http://windows.microsoft.com/en-us/internet-explorer/download-ie">
+		<meta http-equiv="refresh" content="0;URL=https://www.livesimproved.philips.com/pages/info/browser_not_supported.aspx">
 		<![endif]-->
 
 		<!-- the fixed resources -->
