changes needed to make the green sales slider use a percentage from the snapshot data

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -120,7 +120,7 @@
 							</div>
 						</div>
 						<div id="section2">
-							<h4>Green sales</h4>
+							<h4>Green sales percentage</h4>
 							<input id="slidergreensales" type="range" min="-20" max="30" value="0" step="0.1" class="philips"><div class="slider_value" id="value_green_sales">0%</div>
 							<div class="range_indicator">
 								<div class="min" id="greensalesmin">-20</div>
