changes required for improved help overlays

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -159,7 +159,7 @@
 		<div id="btn_wrapper">
 			<div id="btn_bookmarks" class="btn" onclick="app.btnbookmarksclick(this);">Bookmarks</div>
 			<div id="btn_filter" class="btn" onclick="app.btnfilterclick(this);">Filters</div>
-			<div id="btn_explain" class="btn" onclick="app.btnexplainclick(this);">FAQ</div>
+			<div id="btn_explain" class="btn" onclick="app.btnexplainclick(this);">Help</div>
 			<div id="btn_logout" class="btn" onclick="app.btnlogoutclick(this);">Log out</div>
 		</div>
 	</div>
@@ -197,7 +197,7 @@
 </div>
 <div id="explain_panel" class="panel modal">
 	<div class="panel_header">
-		<h2>FAQ</h2>
+		<h2>Help</h2>
 		<div id="btn_close_explain" class="btn btn_close" onclick="objExplain.hide();">X</div>
 	</div>
 	<div class="modal_content">
