--- a/html/data/faq.html
+++ b/html/data/faq.html
@@ -1,4 +1,10 @@
 <div class="faq_wrapper">
+	<div class="faq_header" id="Div1">
+		<a href="#" onclick="objPanelInfo.removelocalstorageitems();">Show help overlays</a>
+	</div>
+</div>
+<h4>FAQ</h4>
+<div class="faq_wrapper">
 	<div class="faq_header" id="faq1" onclick="objExplain.showfaqcontent(this, 'faq1content')"><div class="number">1.</div><div class="text">What is Lives Improved?</div></div>
 	<div class="faq_content" id="faq1content">
 		<p>
