--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -49,7 +49,7 @@
 										<text class="nr_label" x="600" y="180">GDP</text>
 
 										<text id="nr_population" x="600" y="240" fill="#fff">70 million</text>
-										<text class="nr_label" x="600" y="260">Population</text>
+										<text class="nr_label" x="600" y="260">population</text>
 									</g>
 
 								</svg>
@@ -90,7 +90,7 @@
 								   id="popup_trend_base" />
 								<g id="popup_trend_text_wrapper">
 									<text id="popup_trend_number" y="26" x="60" xml:space="preserve">2,23</text>
-									<text id="popup_trend_text" y="40" x="103" xml:space="preserve">Million Lives Improved</text>
+									<text id="popup_trend_text" y="40" x="103" xml:space="preserve">million Lives Improved</text>
 								</g>
 							</g>
 
@@ -109,7 +109,7 @@
 				<div id="simulation">
 
 					<div id="simulation_wrapper">
-						<h1>Year end simulation</h1>
+						<h1>Year-end simulation</h1>
 						<div id="section1">
 							<h4>Sales</h4>
 							<input id="slidersales" type="range" min="-20" max="30" value="0" step="0.1" class="philips"><div class="slider_value" id="value_sales">0%</div>
