--- a/html/data/faq.html
+++ b/html/data/faq.html
@@ -1,20 +1,20 @@
-<div class="faq_wrapper">
+﻿<div class="faq_wrapper">
 	<div class="faq_header" id="Div1">
 		<a href="#" onclick="objPanelInfo.removelocalstorageitems();">Show help overlays</a>
 	</div>
 </div>
 <h4>FAQ</h4>
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq1" onclick="objExplain.showfaqcontent(this, 'faq1content')"><div class="number">1.</div><div class="text">What is Lives Improved?</div></div>
+	<div class="faq_header" id="faq1" onclick="objExplain.showfaqcontent(this, 'faq1content')"><div class="number">1.</div><div class="text">What do we mean by 'Lives Improved'?</div></div>
 	<div class="faq_content" id="faq1content">
 		<p>
 		Philips states in its mission that "we strive to make the world healthier and more sustainable through innovation. Our goal is to improve the lives of 3 billion people a year by 2025."
 		</p>
 		<p>
-		In order to measure the lives improved by Philips, a detailed framework has been developed that is also validated by our accountants, KPMG, on an annual basis.
+		In order to measure the lives improved by Philips, a detailed framework has been developed that is also validated by our external auditors, KPMG, on an annual basis.
 		</p>
 		<p>
-		"Lives improved" by Philips is the number of people that have been in touch with a selected number of our products; a Philips care-, green-, or well-being- product in a given year.
+		'Lives improved' by Philips refers to the number of people whose lives have been touched by specific Philips products a Philips – Care, Green, or Well-being products – in a given year.
 		</p>
 		<p>
 		To guide our efforts and measure our progress, we take a two-dimensional approach – social and ecological – to improving people’s lives. Products and solutions from our portfolio that directly support the curative (care) or preventive (well-being) side of people’s health, determine the contribution to the social dimension. As healthy ecosystems are also needed for people to live a healthy life, the contribution to the ecological dimension is determined by means of our Green Product portfolio, such as our energy-efficient lighting. 
@@ -23,41 +23,41 @@
 </div>
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq2" onclick="objExplain.showfaqcontent(this, 'faq2content')"><div class="number">2.</div><div class="text">What are Care products?</div></div>
+	<div class="faq_header" id="faq2" onclick="objExplain.showfaqcontent(this, 'faq2content')"><div class="number">2.</div><div class="text">What are 'Care products'?</div></div>
 	<div class="faq_content" id="faq2content">
 		<p>
-		Philips Care Products are professional products and services that have a direct positive impact on a person’s health. At this moment, only products from the sector Healthcare fall in this category.
+		Philips Care products are professional products and services that have a direct positive impact on a person’s health. At this moment, only products from the Healthcare sector fall into this category.
 		</p>
 	</div>
 </div>
 
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq3" onclick="objExplain.showfaqcontent(this, 'faq3content')"><div class="number">3.</div><div class="text">What are Well-being products?</div></div>
+	<div class="faq_header" id="faq3" onclick="objExplain.showfaqcontent(this, 'faq3content')"><div class="number">3.</div><div class="text">What are 'Well-being products'?</div></div>
 	<div class="faq_content" id="faq3content">
 		<p>
-		Philips Well-being products and solutions enable people to live healthier lives. By this we mean providing consumers with tools to make healthier choices, e.g. when preparing food (Air fryer, Juicer, Blender); to care for their physical and mental health (Mother &amp; Childcare, Oral Health Care, Light therapy); to create a healthy home environment (Air purification). At this moment, only products from the sector Consumer Lifestyle fall in this category.
+		Philips Well-being products and solutions enable people to live healthier lives. By this we mean providing consumers with tools to make healthier choices, e.g. when preparing food (Airfryer, Juicer, Blender); to care for their physical and mental health (Mother &amp; Childcare, Oral Healthcare, Light therapy); to create a healthy home environment (Air purification). At this moment, only products from the Consumer Lifestyle sector fall into this category.
 		</p>
 	</div>
 </div>
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq4" onclick="objExplain.showfaqcontent(this, 'faq4content')"><div class="number">4.</div><div class="text">What are Green products?</div></div>
+	<div class="faq_header" id="faq4" onclick="objExplain.showfaqcontent(this, 'faq4content')"><div class="number">4.</div><div class="text">What are 'Green products'?</div></div>
 	<div class="faq_content" id="faq4content">
 		<p>
-		Philips Green Products have proven best-in-class eco-performance as defined in the Philips Green Product definition. They offer a significant environmental improvement (>10%), or outperform product-specific eco-performance requirements (e.g. regulatory), or are rewarded with a recognized eco-performance label, and meet sector green product specific minimum requirements.
+		Philips Green Products have proven best-in-class eco-performance, as defined in the Philips Green Product definition: they offer a significant environmental improvement (>10%), or outperform product-specific eco-performance requirements (e.g. regulatory), or have recieved a recognized eco-performance label, and meet specific sector requirements.
 		</p>
 	</div>
 </div>
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq5" onclick="objExplain.showfaqcontent(this, 'faq5content')"><div class="number">5.</div><div class="text">What is double count?</div></div>
+	<div class="faq_header" id="faq5" onclick="objExplain.showfaqcontent(this, 'faq5content')"><div class="number">5.</div><div class="text">What is 'double count'?</div></div>
 	<div class="faq_content" id="faq5content">
 		<p>
-		Double count refers to multiple different product touches per individual. For example one person may own a Philips Green LED lamp and a Philips Senseo Viva Café Eco, and undergo treatment by Philips Healthcare equipment; this person will only be counted once in the model instead of three times.
+		Double count refers to multiple different product touches per individual. For example, one person may own a Philips Green LED lamp and a Philips Senseo Viva Café Eco, and undergo treatment by means of Philips Healthcare equipment; this person will only be counted once in the model instead of three times.
 		</p>
 		<p>
-		Double count elimination is based on probability theory, i.e. the statistical likelihood for multiple product touches of one individual. For more information refer to the methodology document that can be found at <a href="http://www.annualreport2012.philips.com/downloads/pdf/Methodology_for_calculating_lives%20improved_2012.pdf" target="_blank">the Annual Report 2012 website</a>.
+		Double-count elimination is based on probability theory, i.e. the statistical likelihood of one individual having multiple product touches. For more information, refer to the methodology document that can be found on <a href="http://www.annualreport2012.philips.com/downloads/pdf/Methodology_for_calculating_lives%20improved_2012.pdf" target="_blank">the Annual Report 2012 website</a>.
 		</p>
 	</div>
 </div>
@@ -66,11 +66,11 @@
 	<div class="faq_header" id="faq6" onclick="objExplain.showfaqcontent(this, 'faq6content')"><div class="number">6.</div><div class="text">What can I do with this app?</div></div>
 	<div class="faq_content" id="faq6content">
 		<p>
-		The Lives Improved app gives you the actual status of Lives Improved, this allows you to track progress against the targets that have been set. You can make a selection of organizational and geographical filters to get details that are relevant to you. 
+		The Lives Improved app gives you the actual status of Lives Improved and allows you to track progress against the targets that have been set. You can make a selection of organizational and geographical filters to get details that are relevant to you. 
 		</p>
 		<img src="img/slider_model.png" alt="" width="100%"/>
 		<p>
-		Furthermore, you can use the 'slider functionality' to estimate the number of Lives Improved at Year End. This enables you to see what is needed to reach your target.
+		Furthermore, you can use the year-end simulator to estimate the number of Lives Improved at year-end. This enables you to see what is needed to reach your target.
 		</p>
 	</div>
 </div>
@@ -79,10 +79,10 @@
 	<div class="faq_header" id="faq7" onclick="objExplain.showfaqcontent(this, 'faq7content')"><div class="number">7.</div><div class="text">How do the sliders work?</div></div>
 	<div class="faq_content" id="faq7content">
 		<p>
-		The 'slider functionality' always calculates Lives Improved based on a full calendar year time frame, i.e. FY2013. The app uses YTD actual sales data and complements this with last year’s sales data for the remaining months in the current year to get a full calendar year worth of data.
+		The year-end simulator always calculates Lives Improved based on a full calendar year. The app uses actual year-to-date data and supplements this with last year's sales data for the remaining months in the current year in order to get a full calendar year of data.
 		</p>
 		<p>
-		By moving the sliders you can see what happens to the Lives Improved when sales increases or decreases, or when Green Product Sales increases or decreases. These additional sales are assumed to be achieved in the still remaining part of the year. 
+		By moving the sliders you can see what happens to the Lives Improved when sales increase or decrease, or when the Green sales percentage increases or decreases. These additional sales are assumed to be achieved in the remaining part of the year. 
 		</p>
 	</div>
 </div>
@@ -91,7 +91,7 @@
 	<div class="faq_header" id="faq8" onclick="objExplain.showfaqcontent(this, 'faq8content')"><div class="number">8.</div><div class="text">When will the latest sales data become available?</div></div>
 	<div class="faq_content" id="faq8content">
 		<p>
-		The data in the app is updated on a monthly basis. This will be done in the week following the Month-end close.
+		The data in the app is updated on a monthly basis. This is done in the week following the month-end close.
 		</p>
 	</div>
 </div>
@@ -100,7 +100,7 @@
 	<div class="faq_header" id="faq9" onclick="objExplain.showfaqcontent(this, 'faq9content')"><div class="number">9.</div><div class="text">How will I know when new data is available?</div></div>
 	<div class="faq_content" id="faq9content">
 		<p>
-		When new data is available and you open the app, a clear message will tell you that the data has been updated.
+		When new data is available and you open the app, a message will tell you that the data has been updated.
 		</p>
 	</div>
 </div>
@@ -110,7 +110,7 @@
 	<div class="faq_header" id="faq10" onclick="objExplain.showfaqcontent(this, 'faq10content')"><div class="number">10.</div><div class="text">Who can I contact if I have any questions or remarks?</div></div>
 	<div class="faq_content" id="faq10content">
 		<p>
-		You can contact Group Sustainability in case of any questions. Please send an email to <a href="mailto:sustainability@philips.com">sustainability@philips.com</a>.
+		You can contact Group Sustainability with any questions you may have. Please send an e-mail to <a href="mailto:robbert.slooten@philips.com">robbert.slooten@philips.com</a>.
 		</p>
 	</div>
 </div>
