--- a/html/sandbox/graph.html
+++ b/html/sandbox/graph.html
@@ -100,17 +100,17 @@
 			//draw a graph with data
 			var objData={
 				points: [
-					{value: 5, label: 'Q4-12'}
+					{value: 5, label: 'Q4-12', dateend: '2012-12-31', utcend: 1356912000000}
 					,
-					{value: 7, label: 'Q1-13'}
+					{value: 7, label: 'Q1-13', dateend: '2013-03-31', utcend: 1364688000000}
 					,
-					{value: 11, label: 'Q2-13'}
+					{value: 11, label: 'Q2-13', dateend: '2013-06-30', utcend: 1372550400000}
 					,
-					{value: 14, label: 'Q3-13'}
+					{value: 14, label: 'Q3-13', dateend: '2013-09-30', utcend: 1380499200000}
 					,
-					{value: 13, label: 'Q4-13'}
+					{value: 13, label: 'Q4-13', dateend: '2013-12-31', utcend: 1388448000000}
 					,
-					{value: 4, label: 'Q1-14'}
+					{value: 4, label: 'Q4-14', dateend: '2014-12-31', utcend: 1419984000000}
 					/**/
 				],
 				ymin: null,
