--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -109,7 +109,7 @@
 				<div id="simulation">
 
 					<div id="simulation_wrapper">
-						<h1>Year-end simulation</h1>
+						<h1 id="simulation_header">.</h1>
 						<div id="section1">
 							<h4>Sales</h4>
 							<input id="slidersales" type="range" min="-20" max="30" value="0" step="0.1" class="philips"><div class="slider_value" id="value_sales">0%</div>
