added option to style the “current line” of the graph - in app.js trend graph.stylecurrentline

--- a/html/sandbox/graph.html
+++ b/html/sandbox/graph.html
@@ -133,7 +133,10 @@
 					/**/
 				],
 				ymin: null,
-				ymax: null
+				ymax: null,
+				styles: {
+					stylecurrentline: 'stroke: red'
+				}
 			}
 
 			//console.log(JSON.stringify(objData.points));
