added a title for the web page and added a version of the html for local development

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 		<meta charset="utf-8">
-		<title></title>
+		<title>Philips Sustainability - LivesImproved</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 
@@ -45,7 +45,7 @@
 		</script>
 		<div id="content_outer_wrapper">.</div>
 		<script type="text/javascript">
-			//attempt to start the application logic
+			//start the application logic
 			objConfig.startapplication();
 		</script>
 	</body>
