example for loading configuration file dynamically

--- a/html/w2003.html
+++ b/html/w2003.html
@@ -15,6 +15,11 @@
 		<!-- the fixed resources -->
 		<!-- Config (contains the definitions and the css and js sources to load dynamically) -->
 		<script type="text/javascript" src="js/config.js">//</script>
+		<!--
+		<script type="text/javascript">
+			document.write('\x3Cscript type="text/javascript" src="js/config.js?rnd=' + Math.random() + '">\x3C/script>');
+		</script>
+		-->
 
 		<!-- Libs -->
 		<script type="text/javascript" src="js/lib/async.js">//</script>
