--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -172,6 +172,7 @@
 				<input type="text" id="username" placeholder="Account" value=""/>
 				<input type="password" id="password" placeholder="Password" value=""/>
 				<input type="submit" id="btn_submit" class="btn btn_login" onclick="objLogin.btnsubmitclick(event);" value="Log in"/>
+				<div onclick="loadUrlInExternalBrowser('http://www.google.com');">load url</div>
 			</div>
 		</form>
 	</div>
