--- a/html/data/faq.html
+++ b/html/data/faq.html
@@ -57,7 +57,7 @@
 		Double count refers to multiple different product touches per individual. For example, one person may own a Philips Green LED lamp and a Philips Senseo Viva Café Eco, and undergo treatment by means of Philips Healthcare equipment; this person will only be counted once in the model instead of three times.
 		</p>
 		<p>
-		Double-count elimination is based on probability theory, i.e. the statistical likelihood of one individual having multiple product touches. For more information, refer to the methodology document that can be found on <a href="http://www.annualreport2012.philips.com/downloads/pdf/Methodology_for_calculating_lives%20improved_2012.pdf" target="_blank">the Annual Report 2012 website</a>.
+		Double-count elimination is based on probability theory, i.e. the statistical likelihood of one individual having multiple product touches. For more information, refer to the methodology document that can be found on <a href="http://www.annualreport2012.philips.com/downloads/pdf/Methodology_for_calculating_lives%20improved_2012.pdf" target="_blank">the Annual Report website</a>.
 		</p>
 	</div>
 </div>
