--- a/html/johan.html
+++ b/html/johan.html
@@ -13,6 +13,7 @@
 		<![endif]-->
 
 		<!-- the fixed resources -->
+		<script type="text/javascript" charset="utf-8" src="../cordova.js">//</script>
 		<!-- Config (contains the definitions and the css and js sources to load dynamically) -->
 		<script type="text/javascript" src="js/config.js">//</script>
 
