--- a/html/w2003.html
+++ b/html/w2003.html
@@ -31,7 +31,7 @@
 		<script type="text/javascript" src="js/lib/CSSPlugin.min.js">//</script>
 		<script type="text/javascript" src="js/lib/EasePack.min.js">//</script>
 		<script type="text/javascript" src="js/lib/TweenLite.js">//</script>
-		<script type="text/javascript" src="js/lib/hammer.js">//</script>
+		<script type="text/javascript" src="js/lib/hammer.min.js">//</script>
 		<script type="text/javascript" src="js/lib/sizzle.min.js">//</script>
 		<script type="text/javascript" src="js/lib/marquee.js">//</script>
 
