--- a/html/w2003.html
+++ b/html/w2003.html
@@ -30,7 +30,7 @@
 		<script type="text/javascript" src="js/lib/svg_zoom_homegrown_v2.js">//</script>
 		<script type="text/javascript" src="js/lib/CSSPlugin.min.js">//</script>
 		<script type="text/javascript" src="js/lib/EasePack.min.js">//</script>
-		<script type="text/javascript" src="js/lib/TweenLite.js">//</script>
+		<script type="text/javascript" src="js/lib/TweenLite.min.js">//</script>
 		<script type="text/javascript" src="js/lib/hammer.min.js">//</script>
 		<script type="text/javascript" src="js/lib/sizzle.min.js">//</script>
 		<script type="text/javascript" src="js/lib/marquee.js">//</script>
