--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -168,13 +168,9 @@
 	<div class="form_outer_wrapper">
 		<form id="login">
 			<div id="form_wrapper">
-				<span>Please log in using CODE1\*** and password.</span>
-				<input type="text" id="username" placeholder="Account" value=""/>
-				<input type="password" id="password" placeholder="Password" value=""/>
+				<div class="text emphasis">You are not logged in at the Philips domain.</div>
+        <div class="text">Please use the button below to access this application.</div>
 				<input type="submit" id="btn_submit" class="btn btn_login" onclick="objLogin.btnsubmitclick(event);" value="Log in"/>
-				<!--
-				<div class="mimiclink" onclick="loadUrlInBrowser('http://www.google.com');">load url</div>
-				-->
 			</div>
 		</form>
 	</div>
