content change in FAQ

--- a/html/data/faq.html
+++ b/html/data/faq.html
@@ -70,7 +70,7 @@
 		</p>
 		<img src="img/slider_model.png" alt="" width="100%"/>
 		<p>
-		Furthermore, you can use the year-end simulator to estimate the number of Lives Improved at year-end. This enables you to see what is needed to reach your target.
+		Furthermore, you can use the next-quarter simulator to estimate the number of Lives Improved at the end of the next quarter. This enables you to see what is needed to reach your target.
 		</p>
 	</div>
 </div>
@@ -79,7 +79,7 @@
 	<div class="faq_header" id="faq7" onclick="objExplain.showfaqcontent(this, 'faq7content')"><div class="number">7.</div><div class="text">How do the sliders work?</div></div>
 	<div class="faq_content" id="faq7content">
 		<p>
-		The year-end simulator always calculates Lives Improved based on a full calendar year. The app uses actual year-to-date data and supplements this with last year's sales data for the remaining months in the current year in order to get a full calendar year of data.
+		The next-quarter simulator always calculates Lives Improved based on a full calendar year. The app uses actual year-to-date data and supplements this with last year's sales data for the remaining months in the current year in order to get a full calendar year of data.
 		</p>
 		<p>
 		By moving the sliders you can see what happens to the Lives Improved when sales increase or decrease, or when the Green sales percentage increases or decreases. These additional sales are assumed to be achieved in the remaining part of the year. 
