updated FAQ content

--- a/html/data/faq.html
+++ b/html/data/faq.html
@@ -17,7 +17,7 @@
 		'Lives improved' by Philips refers to the number of people whose lives have been touched by specific Philips products a Philips – Care, Green, or Well-being products – in a given year.
 		</p>
 		<p>
-		To guide our efforts and measure our progress, we take a two-dimensional approach – social and ecological – to improving people’s lives. Products and solutions from our portfolio that directly support the curative (care) or preventive (well-being) side of people’s health, determine the contribution to the social dimension. As healthy ecosystems are also needed for people to live a healthy life, the contribution to the ecological dimension is determined by means of our Green Product portfolio, such as our energy-efficient lighting. 
+    To guide our efforts and measure our progress, we take a two-dimensional approach – social and ecological – to improving people's lives. Products and solutions from our portfolio that directly support the curative (care) or preventive (well-being) side of people's health, determine the contribution to the social dimension. As healthy ecosystems are also needed for people to live a healthy life, the contribution to the ecological dimension is determined by means of our Green Product portfolio, such as our energy-efficient lighting. 
 		</p>
 	</div>
 </div>
@@ -70,7 +70,7 @@
 		</p>
 		<img src="img/slider_model.png" alt="" width="100%"/>
 		<p>
-		Furthermore, you can use the next-quarter simulator to estimate the number of Lives Improved at the end of the next quarter. This enables you to see what is needed to reach your target.
+    Furthermore, you can use the simulator to see what kind of impact changes in sales and Green Sales percentage have on the next quarter Lives Improved results. This enables you to see what is needed to reach your target.
 		</p>
 	</div>
 </div>
@@ -79,10 +79,10 @@
 	<div class="faq_header" id="faq7" onclick="objExplain.showfaqcontent(this, 'faq7content')"><div class="number">7.</div><div class="text">How do the sliders work?</div></div>
 	<div class="faq_content" id="faq7content">
 		<p>
-		The next-quarter simulator always calculates Lives Improved based on a full calendar year. The app uses actual year-to-date data and supplements this with last year's sales data for the remaining months in the current year in order to get a full calendar year of data.
+    The simulator always calculates Lives Improved for the next quarter-end. The app uses actual year-to-date data and supplements this with last year's sales data to determine trends and extrapolate data for the next quarter.
 		</p>
 		<p>
-		By moving the sliders you can see what happens to the Lives Improved when sales increase or decrease, or when the Green sales percentage increases or decreases. These additional sales are assumed to be achieved in the remaining part of the year. 
+		By moving the sliders you can see what happens to the Lives Improved when sales increase or decrease, or when the Green sales percentage increases or decreases. 
 		</p>
 	</div>
 </div>
@@ -91,7 +91,7 @@
 	<div class="faq_header" id="faq8" onclick="objExplain.showfaqcontent(this, 'faq8content')"><div class="number">8.</div><div class="text">When will the latest sales data become available?</div></div>
 	<div class="faq_content" id="faq8content">
 		<p>
-		The data in the app is updated on a monthly basis. This is done in the week following the month-end close.
+    The data in the app is updated on a quarterly basis. This is done in the week following the offical press release of financial results.
 		</p>
 	</div>
 </div>
