--- a/html/sandbox/graph.html
+++ b/html/sandbox/graph.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--[if IEMobile 7 ]>    <html class="no-js iem7"> <![endif]--><!--[if (gt IEMobile 7)|!(IEMobile)]><!-->
+﻿<!DOCTYPE html><!--[if IEMobile 7 ]>    <html class="no-js iem7"> <![endif]--><!--[if (gt IEMobile 7)|!(IEMobile)]><!-->
 <html class="no-js">
 <!--<![endif]-->
 <head>
@@ -77,6 +77,7 @@
 	
 	<script type="text/javascript" src="../js/panels/graph.js">//</script>
 	<script type="text/javascript" src="../js/panels/map.js">//</script>
+  <script type="text/javascript" src="../js/panels/sliders.js">  //</script>
 	<script type="text/javascript" src="../js/helpers/utils.js">//</script>
 	<script type="text/javascript">
 
@@ -98,6 +99,13 @@
 					predictionlabel: 'Q2 2014',
 					predictiondate: '2014-06-30'
 				}
+			},
+			trendgraph: {
+			  //if left empty ('') then the system will assume that the simulator point is year end data
+			  predictionlabel: 'Q1 2014', //set the label of the last point (simulator) in the graph to a manual value
+			  predictiondate: '2014-03-31', //(yyyy-mm-dd) set to a date to ovewrite the year end date that will normally be calculated
+			  pointsvisible: null, //set to a value to limit the number of points shown in the graph
+			  stylecurrentline: '' //overwrite the style of the line to the current data point
 			}
 		}
 
@@ -142,15 +150,25 @@
 				stylecurrentline: 'stroke: red'
 			}
 		}
+		//objTrendGraph.drawgraph(objData);
 
-		psv('GET', '/webapp/html/sandbox/data_dump/nordics_3_BS9002.json', {}, function (err, data) {
+
+    
+		psv('GET', '/webapp/html/sandbox/data_dump/super-low.json', {}, function (err, data) {
 			if (err) {
 				console.log(err);
 			} else {
+			  objSliders.vars.setupsimulator = false;
+        //convert the standard output to 
+			  objSliders.getsimulatordatahandler(null, data);
+
 				//console.log(JSON.stringify(objData.points));
-				objTrendGraph.drawgraph(data);
+				//objTrendGraph.drawgraph(data);
 			}
 		});
+    /**/
+
+		
 
 		
 
