submit button should now work

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -167,7 +167,7 @@
       <div id="form_wrapper">
         <div class="text emphasis">You are not logged in at the Philips domain.</div>
         <div class="text">Please use the button below to access this application.</div>
-        <input type="submit" id="btn_submit" class="btn btn_login" onclick="objLogin.btnsubmitclick(event);" value="Log in" />
+        <input type="button" id="btn_submit" class="btn btn_login" onclick="objLogin.btnsubmitclick();" value="Log in" />
       </div>
     </form>
   </div>
