Removed "X" for close button because we use SVG element for this

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -176,7 +176,7 @@
   <div id="filter_loader"></div>
   <div class="panel_header">
     <h2>Filters</h2>
-    <div id="btn_close_filter" class="btn btn_close" onclick="objFilter.hide();">X</div>
+    <div id="btn_close_filter" class="btn btn_close" onclick="objFilter.hide();">.</div>
     <div id="btn_apply_filter" class="btn btn_apply" onclick="objFilter.applyfilter();">Apply</div>
   </div>
   <div class="modal_content">
@@ -214,7 +214,7 @@
 <div id="bookmarks_panel" class="panel modal">
   <div class="panel_header">
     <h2>Bookmarks</h2>
-    <div id="btn_close_bookmarks" class="btn btn_close" onclick="objBookmarks.hide(true);">X.</div>
+    <div id="btn_close_bookmarks" class="btn btn_close" onclick="objBookmarks.hide(true);">.</div>
   </div>
   <div class="modal_content" id="bookmarkslist">
 
