Fill the region title bar on the public website

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -26,6 +26,9 @@
         <div id="region_info_wrapper">
 
           <div class="svg_wrapper">
+            <div id="region_info_title_wrapper" class="hide">
+              <h2 id="region_info_title">.</h2>
+            </div>
             <div id="holder">
               <svg id="svg_circle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100%" viewBox="0 0 640 300" preserveAspectRatio="xMidYMid meet">
                 <g id="g" fill="none" transform="translate(0,10)" style="text-anchor: middle;">
