initial multilingual version using translated fragments from JSON files

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -49,10 +49,10 @@
                   <text id="nr_lives_improved_label" x="600" y="100">million lives improved</text>
 
                   <text id="nr_gdp" x="600" y="160" fill="#fff">$305 billion</text>
-                  <text class="nr_label" x="600" y="180">GDP</text>
+                  <text class="nr_label" x="600" y="180">[gdp]</text>
 
                   <text id="nr_population" x="600" y="240" fill="#fff">70 million</text>
-                  <text class="nr_label" x="600" y="260">population</text>
+                  <text class="nr_label" x="600" y="260">[population]</text>
                 </g>
 
               </svg>
